# zusi-fahrplan-generator

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  core.rs  input.rs  lib.rs  main.rs  serde_helpers.rs  test_utils.rs
src/core/: copy_delay.rs  fahrplan_generator.rs  generate_fahrplan.rs  lib.rs  replace_rolling_stock.rs  schedule.rs  schedules.rs
src/core/copy_delay/: zug_nummer.rs
src/core/fahrplan_generator/: error.rs  generate_fahrplan_error.rs  generate_train.rs  generate_zug.rs  helpers.rs
src/core/generate_fahrplan/: generate_zug.rs
src/core/lib/: copy_delay.rs  file_error.rs  generated_zug.rs  helpers.rs  zug_nummer.rs
src/core/schedule/: apply.rs  prepare_entries.rs
src/core/schedules/: apply.rs  generate.rs  longest_common_coherent_subsequence.rs  prepare_entries.rs  update_buchfahrplan.rs
src/input/: apply_schedule.rs  copy_delay_config.rs  environment.rs  fahrplan_config.rs  rolling_stock_config.rs  schedule.rs
src/input/environment/: zusi_environment.rs  zusi_environment_config.rs
src/input/fahrplan_config/: non_default_fahrzeug_verband_aktion.rs
src/serde_helpers/: with.rs
tests/: apply_schedule.rs  generate_fahrplan.rs  generate_fahrplan_with_buchfahrplan.rs  generate_schedule.rs
tests/apply_schedule/expected/: trn-2.xml
tests/apply_schedule/input/: schedule.xml  trn-1.xml  trn-2.xml
tests/generate_fahrplan/expected/: my-fahrplan.xml  trn-1.xml  trn-2.xml  trn-3.xml  trn-4.xml
tests/generate_fahrplan/input/: config.xml  meta-data.xml  rolling-stock-a.xml  route-part-1.schedule.xml  route-part-2.xml
tests/generate_fahrplan_with_buchfahrplan/expected/: trn-1.timetable.xml  trn-1.xml  trn-2.timetable.xml  trn-2.xml
tests/generate_fahrplan_with_buchfahrplan/input/: config.xml  rolling-stock-b.timetable.xml  (+3 more)
tests/utils/: mod.rs  tmp_dir_helper.rs
(+29 files in other folders)
