[package]
name = "zusi-fahrplan-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
serde-helpers = { path = "../serde-helpers" }
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
zusi-xml-lib = { path = "../zusi-xml-lib" }

[dev-dependencies]
glob = "0.3"
tempfile = "3.2"
