[package]
name = "zusi-fahrplan-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
serde-helpers = { path = "../serde-helpers" }
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
zusi-xml-lib = { path = "../zusi-xml-lib" }

[dev-dependencies]
assert_cmd = "2.0"
glob = "0.3"
predicates = "3.1"
tempfile = "3.2"

[profile.dev]
debug = 'line-tables-only'

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true